<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="用户名:"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/userName_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/modify_btn"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18dp" 
                />

            <Button
                android:id="@+id/modify_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="修改"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/one_thick_line_tv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/registerShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/registerShowStr"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/registerCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/registerCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/circular_bead_border_red"
        android:paddingBottom="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp"
        android:text="复制"
        android:textColor="@color/common_theme_color"
        android:textSize="18dp" />

    <include layout="@layout/one_thick_line_tv" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerCopy"
            android:layout_marginTop="8.0dip"
            android:paddingLeft="10dp"
            android:text="@string/registerTextStr"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/registerInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8.0dip"
            android:hint="@string/registerTextShowStr" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/registerClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/circular_bead_border_red"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="8dp"
            android:text="@string/registerClearStr"
            android:textColor="@color/common_theme_color"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/zhantie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_bead_border_red"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="8dp"
            android:text="@string/zhantieStr"
            android:textColor="@color/common_theme_color"
            android:textSize="18dp" />
    </LinearLayout>

    <Button
        android:id="@+id/app_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerInput"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_toRightOf="@id/zhantie"
        android:text="@string/app_register_str" />

    <TextView
        android:id="@+id/registerTiShi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/zhantie"
        android:layout_below="@id/registerClear"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="8.0dip"
        android:text="" />

</LinearLayout>